--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ color:#000;
 
 header{
   height:100vh; /*969px;*/
-  background-image: url('../images/bakery-back.jpg');
+  background-image: url('/images/bakery-back.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -101,7 +101,7 @@ section.background-parallax {
 
 
 section.menu {
-  background-image: url('../images/background3.jpg');
+  background-image: url('/images/background3.jpg');
   background-repeat: no-repeat;
   height: 700px;
   background-attachment: fixed;
@@ -145,7 +145,16 @@ section.menu {
     left: 0;
 } 
 
+.row.mapinfo {
+  margin-bottom: 0px !important;
+}
 
+span.cost {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #ffa500;
+  text-shadow: 2px 2px #000;
+}
   
   @media only screen and (max-width : 1366px) {
 
